--- a/AI-Experiments/AI-Experiments.vcxproj
+++ b/AI-Experiments/AI-Experiments.vcxproj
@@ -179,6 +179,7 @@ xcopy /Y /s "$(ProjectDir)resources" "$(OutDir)resources\"</Command>
     <ClCompile Include="source\Agents\Agent.cpp" />
     <ClCompile Include="source\Agents\AgentManager.cpp" />
     <ClCompile Include="source\AiGame.cpp" />
+    <ClCompile Include="source\AI\Locomotion\AStar.cpp" />
     <ClCompile Include="source\Core\Font.cpp" />
     <ClCompile Include="source\Core\Game.cpp" />
     <ClCompile Include="source\Core\Input.cpp" />
@@ -191,9 +192,11 @@ xcopy /Y /s "$(ProjectDir)resources" "$(OutDir)resources\"</Command>
     <ClInclude Include="source\Agents\Agent.h" />
     <ClInclude Include="source\Agents\AgentManager.h" />
     <ClInclude Include="source\AiGame.h" />
+    <ClInclude Include="source\AI\Locomotion\AStar.h" />
     <ClInclude Include="source\Core\Font.h" />
     <ClInclude Include="source\Core\Game.h" />
     <ClInclude Include="source\Core\Input.h" />
+    <ClInclude Include="source\Core\PriorityHeap.h" />
     <ClInclude Include="source\Core\Random.h" />
     <ClInclude Include="source\Core\Renderer2D.h" />
     <ClInclude Include="source\Core\Texture.h" />
