--- a/AI-Experiments/imgui.ini
+++ b/AI-Experiments/imgui.ini
@@ -1,11 +1,24 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=224,224
 Size=400,400
 Collapsed=0
 
 [Window][Debugger]
-Pos=60,60
-Size=103,54
+ViewportPos=3031,193
+ViewportId=0x289D2C3F
+Size=555,635
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+ViewportPos=2854,129
+ViewportId=0xE927CF2F
+Size=550,680
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+ViewportPos=2526,344
+ViewportId=0x8FC55800
+Size=339,324
 Collapsed=0
 
 [Docking][Data]
