--- a/AI-Experiments/AI-Experiments.vcxproj.filters
+++ b/AI-Experiments/AI-Experiments.vcxproj.filters
@@ -81,19 +81,10 @@
     <ClCompile Include="source\AiGame.cpp">
       <Filter>Project\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="source\Core\Font.cpp">
-      <Filter>Core\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="source\Core\Game.cpp">
       <Filter>Core\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="source\Core\Input.cpp">
-      <Filter>Core\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="source\Core\Renderer2D.cpp">
-      <Filter>Core\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="source\Core\Texture.cpp">
       <Filter>Core\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="source\Core\Window.cpp">
@@ -108,17 +99,8 @@
     <ClCompile Include="source\Agents\Agent.cpp">
       <Filter>Project\Source Files\Agents</Filter>
     </ClCompile>
-    <ClCompile Include="source\Core\Random.cpp">
-      <Filter>Core\Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="source\AI\Locomotion\AStar.cpp">
       <Filter>Project\Source Files\AI\Locomotion</Filter>
-    </ClCompile>
-    <ClCompile Include="source\Core\IDebugHandler.cpp">
-      <Filter>Core\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="source\Core\Debugger.cpp">
-      <Filter>Core\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="source\Core\GameTime.cpp">
       <Filter>Core\Source Files</Filter>
@@ -144,6 +126,24 @@
     <ClCompile Include="imgui\imgui.cpp">
       <Filter>ImGui\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\Core\Debugging\Debugger.cpp">
+      <Filter>Core\Source Files\Debugging</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Core\Debugging\IDebugHandler.cpp">
+      <Filter>Core\Source Files\Debugging</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Core\Rendering\Renderer2D.cpp">
+      <Filter>Core\Source Files\Rendering</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Core\Rendering\Font.cpp">
+      <Filter>Core\Source Files\Rendering</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Core\Rendering\Texture.cpp">
+      <Filter>Core\Source Files\Rendering</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Core\Structures\Random.cpp">
+      <Filter>Core\Source Files\Structures</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\AiGame.h">
@@ -152,19 +152,10 @@
     <ClInclude Include="source\Core\Window.h">
       <Filter>Core\Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="source\Core\Font.h">
-      <Filter>Core\Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="source\Core\Game.h">
       <Filter>Core\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\Core\Input.h">
-      <Filter>Core\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="source\Core\Renderer2D.h">
-      <Filter>Core\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="source\Core\Texture.h">
       <Filter>Core\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\Agents\AgentManager.h">
@@ -173,23 +164,11 @@
     <ClInclude Include="source\Agents\Agent.h">
       <Filter>Project\Header Files\Agents</Filter>
     </ClInclude>
-    <ClInclude Include="source\Core\Random.h">
-      <Filter>Core\Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="source\Global.h">
       <Filter>Core\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\AI\Locomotion\AStar.h">
       <Filter>Project\Header Files\AI\Locomotion</Filter>
-    </ClInclude>
-    <ClInclude Include="source\Core\PriorityHeap.h">
-      <Filter>Core\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="source\Core\IDebugHandler.h">
-      <Filter>Core\Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="source\Core\Debugger.h">
-      <Filter>Core\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\Core\GameTime.h">
       <Filter>Core\Header Files</Filter>
@@ -218,8 +197,29 @@
     <ClInclude Include="imgui\imstb_truetype.h">
       <Filter>ImGui\Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="source\Core\MultiValueStruct.h">
-      <Filter>Core\Header Files</Filter>
+    <ClInclude Include="source\Core\Debugging\Debugger.h">
+      <Filter>Core\Header Files\Debugging</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Core\Debugging\IDebugHandler.h">
+      <Filter>Core\Header Files\Debugging</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Core\Rendering\Font.h">
+      <Filter>Core\Header Files\Rendering</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Core\Rendering\Renderer2D.h">
+      <Filter>Core\Header Files\Rendering</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Core\Rendering\Texture.h">
+      <Filter>Core\Header Files\Rendering</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Core\Structures\MultiValueStruct.h">
+      <Filter>Core\Header Files\Structures</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Core\Structures\PriorityHeap.h">
+      <Filter>Core\Header Files\Structures</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Core\Structures\Random.h">
+      <Filter>Core\Header Files\Structures</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
