--- a/AI-Experiments/AI-Experiments.vcxproj
+++ b/AI-Experiments/AI-Experiments.vcxproj
@@ -186,7 +186,7 @@ xcopy /Y /s "$(ProjectDir)resources" "$(OutDir)resources\"</Command>
     <ClCompile Include="source\Agents\Agent.cpp" />
     <ClCompile Include="source\Agents\AgentManager.cpp" />
     <ClCompile Include="source\AiGame.cpp" />
-    <ClCompile Include="source\AI\Locomotion\AStar.cpp" />
+    <ClCompile Include="source\AI\Pathfinding\AStar.cpp" />
     <ClCompile Include="source\Core\Debugging\Debugger.cpp" />
     <ClCompile Include="source\Core\Debugging\IDebugHandler.cpp" />
     <ClCompile Include="source\Core\Game.cpp" />
@@ -210,7 +210,7 @@ xcopy /Y /s "$(ProjectDir)resources" "$(OutDir)resources\"</Command>
     <ClInclude Include="source\Agents\Agent.h" />
     <ClInclude Include="source\Agents\AgentManager.h" />
     <ClInclude Include="source\AiGame.h" />
-    <ClInclude Include="source\AI\Locomotion\AStar.h" />
+    <ClInclude Include="source\AI\Pathfinding\AStar.h" />
     <ClInclude Include="source\Core\Debugging\Debugger.h" />
     <ClInclude Include="source\Core\Debugging\IDebugHandler.h" />
     <ClInclude Include="source\Core\Game.h" />
