--- a/AI-Experiments/AI-Experiments.vcxproj
+++ b/AI-Experiments/AI-Experiments.vcxproj
@@ -187,6 +187,8 @@ xcopy /Y /s "$(ProjectDir)resources" "$(OutDir)resources\"</Command>
     <ClCompile Include="source\Agents\AgentManager.cpp" />
     <ClCompile Include="source\AiGame.cpp" />
     <ClCompile Include="source\AI\Pathfinding\AStar.cpp" />
+    <ClCompile Include="source\AI\Pathfinding\PathfindingEdge.cpp" />
+    <ClCompile Include="source\AI\Pathfinding\PathfindingNode.cpp" />
     <ClCompile Include="source\Core\Debugging\Debugger.cpp" />
     <ClCompile Include="source\Core\Debugging\IDebugHandler.cpp" />
     <ClCompile Include="source\Core\Game.cpp" />
@@ -211,6 +213,9 @@ xcopy /Y /s "$(ProjectDir)resources" "$(OutDir)resources\"</Command>
     <ClInclude Include="source\Agents\AgentManager.h" />
     <ClInclude Include="source\AiGame.h" />
     <ClInclude Include="source\AI\Pathfinding\AStar.h" />
+    <ClInclude Include="source\AI\Pathfinding\PathfindingEdge.h" />
+    <ClInclude Include="source\AI\Pathfinding\PathfindingGraph.h" />
+    <ClInclude Include="source\AI\Pathfinding\PathfindingNode.h" />
     <ClInclude Include="source\Core\Debugging\Debugger.h" />
     <ClInclude Include="source\Core\Debugging\IDebugHandler.h" />
     <ClInclude Include="source\Core\Game.h" />
